<resources>
    <string name="app_name">Best_Sellers</string>

    <string name="insert_was_not_successful">درج اطلاعات موفق نبود</string>
    <string name="please_choose_your_role">لطفا نقش خود را انتخاب کنید</string>
    <string name="user">کاربر</string>
    <string name="seller">فروشنده</string>
    <string name="name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="phone">شماره همراه</string>
    <string name="passwd">رمز عبور</string>
    <string name="passwd_repeat">تکرار رمز عبور</string>
    <string name="submit">تایید</string>
    <string name="please_fill_field">لطفا این قسمت را کامل کنید</string>
    <string name="please_insert_correct_information">لطفا اطلاعات صحیح را وارد کنید</string>
    <string name="user_not_found">کاربر مورد نظر یافت نشد!!</string>
    <string name="connection_error">مشکل در اتصال به اینترنت</string>
    <string name="login">ورود</string>
    <string name="signUp">ثبت نام</string>
    <string name="shop_name">نام فروشگاه</string>
    <string name="address">آدرس</string>
    <string name="please_choose_shop_category">لطفا دسته‌بندی را انتخاب کنید</string>
    <string name="categories">دسته‌بندی ها</string>
    <string name="category_not_found">دسته بندی یافت نشد</string>
    <string name="user_does_not_have_shop">فروشگاهی برای این کاربر یافت نشد</string>
    <string name="statistic">آمار</string>
    <string name="store">فروشگاه</string>
    <string name="dashboard">داشبورد</string>
    <string name="shop_not_found">فروشگاه یافت نشد!</string>
    <string name="seller_not_found">فروشنده یافت نشد!</string>
    <string name="create_discount">ایجاد تخفیف</string>
    <string name="check_user_discount">بررسی تخفیف مشتری</string>
    <string name="can_not_create_new_discount">امکان ساخت تخفیف جدید وجود ندارد</string>
    <string name="there_is_not_any_discount_to_delete">تخفیفی برای حذف وجود ندارد</string>
    <string name="discount_delete_successfully">کد تخفیف با موفقیت حذف شد</string>
    <string name="discount_register_successfully">کد تخفیف با موفقیت ذخیره شد</string>
    <string name="there_is_not_any_Discount_for_this_shop">کد تخفیفی برای این فروشگاه ثبت نشده است</string>
    <string name="discount_name">نام تخفیف</string>
    <string name="discount_amount">میزان تخفیف</string>
    <string name="discount_amount_is_not_valid">مقدار تخفیف صحیح نمیباشد</string>
    <string name="name_must_be_without_space">لطفا نام را بدون فاصله میانی وارد کنید</string>
    <string name="delete_discount">حذف تخفیف</string>
    <string name="warning">هشدار!!</string>
    <string name="are_you_sure_to_delete_discount">آیا از حذف تخفیف مطمئن هستید؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="user_id">شماره یکتا کاربر</string>
    <string name="user_id_show">شماره کاربری : %s</string>
    <string name="user_has_discount">تبریک. کاربر از کد تخفیف برخوردار است</string>
    <string name="user_does_not_have_discount">متاسفانه این کاربر از کد تخفیف برخوردار نیست</string>
    <string name="consume">مصرف کردن</string>
    <string name="delete_discount_of_user_was_not_successful">حذف تخفیف کاربر موفق نبود</string>
    <string name="change_confirm_successfully">تغییرات با موفقیت اعمال شد</string>
    <string name="user_messages">پیام های کاربران</string>
    <string name="message_not_found">پیامی یافت نشد!</string>
    <string name="delete_shop_was_not_successful">حذف فروشنگاه موفق نبود!</string>
    <string name="delete_shop">حذف فروشگاه</string>
    <string name="are_you_sure_want_to_delete_shop">آیا حذف فروشگاه مطمئن هستید؟</string>
    <string name="delete_seller_was_not_successful">حذف فروشنده موفق نبود!</string>
    <string name="are_you_sure_want_to_delete_seller">آیا حذف فروشنده مطمئن هستید؟</string>
    <string name="delete_seller">حذف فروشنده</string>
    <string name="open">باز</string>
    <string name="close">بسته</string>
    <string name="search_shop">جست و جو فروشگاه</string>
    <string name="check_discount">بررسی کد تخفیف</string>
    <string name="remove_user">حذف کاربر</string>
    <string name="delete_user_was_not_successful">حذف کاربر موفق نبود</string>
    <string name="are_you_sure_want_to_delete_user">آیا حذف کاربر مطمئن هستید؟</string>
    <string name="survey">نظرسنجی</string>
    <string name="register">ثبت</string>
    <string name="message_is_not_registered">پیام ذخیره نشد.</string>
    <string name="question_not_found">سوالی یافت نشد</string>
    <string name="question_not_register">سوال ذخیره نشد</string>
    <string name="your_opinion_register_successfully">نظر شما با موفقیت ثبت شد</string>
    <string name="update">بروزرسانی</string>
    <string name="unknown_error_happen">خطای ناشناخته رخ داده است</string>
    <string name="shop_QR_code">کد QR فروشگاه</string>
    <string name="save_image">ذخیره تصویر</string>
    <string name="image_saved_successfully">تصویر با موفقیت ذخیره شد</string>
    <string name="image_dose_not_saved_successfully">تصویر ذخیره نشد</string>
    <string name="scan_qr_code">اسکن کد QR</string>
    <string name="to_use_this_section_please_install_qr_code_scanner">برای کار با این قسمت لطفا Barcode Scanner را نصب کنید </string>
    <string name="code_scan_was_not_successful">اسکن کد موفق نبود</string>
    <string name="unable_to_access_user_location">دسترسی به موقعیت کاربر ممکن نیست!</string>
    <string name="if_you_sign_up_before_login">اگر قبلا ثبت نام کرده اید وارد شوید</string>
    <string name="if_you_do_not_sign_up_sign_up_please">اگر قبلا ثبت نام نکرده اید ثبت نام کنید</string>
    <string name="discount_percent">%s%%</string>
    <string name="discount_name_show">کد تخفیف : %s</string>
    <string name="address_show">آدرس : %s</string>
    <string name="shop">فروشگاه</string>
    <string name="name_and_lastName_show">%s %s</string>
    <string name="you_can_not_register_new_discount_please_remove_previous_discount_code">امکان ساخت کد تخفیف جدید وجود ندارد. ابتدا کد تخفیف قبلی را حذف کنید</string>
    <string name="there_is_not_any_discount_please_create_new_discount">تخفیفی برای حذف وجود ندارد. ابتدا یک تخفیف ایجاد کنید </string>
    <string name="discount_not_found">تخفیفی یافت نشد!</string>
    <string name="register_discount_for_user_was_not_successful">ذخیره تخفیف برای کاربر موفق نبود!</string>
    <string name="new_discount_set_for_you">تخفیف جدید برای شما ثبت شد</string>
    <string name="shop_phone">شماره تلفن فروشگاه</string>
    <string name="shop_site_not_required">سایت فروشگاه (الزامی نیست)</string>
    <string name="shop_description">معرفی فروشگاه</string>
    <string name="users_do_not_set_any_statistic">هنوز نظزی ثبت نشده است</string>
    <string name="next">بعدی</string>
    <string name="previous">قبلی</string>
    <string name="start_app">شروع برنامه</string>
    <string name="introSlider_location_description">دسترسی به نزدیک ترین و یا بهترین فروشگاه بر اساس معیار های ارزیابی</string>
    <string name="introSlider_survey_description">ثبت امتیاز و نظرات در مورد فروشگاه ها</string>
    <string name="introSlider_statistic_description">امکان مشاهده ی آمار و نظرات کاربران</string>
    <string name="direction">مسیریابی</string>
    <string name="city_changed_to">شهر شما به %s تغییر پیدا کرد</string>
    <string name="current_city_is">شهر فعلی شما : %s</string>
    <string name="default_city">تهران</string>
    <string name="provinces">استان ها</string>
    <string name="your_message">پیام شما ...</string>

    <string-array name="cities">
        <item>آذربایجان شرقی</item>
        <item>آذربایجان غربی</item>
        <item>اردبیل</item>
        <item>اصفهان</item>
        <item>البرز</item>
        <item>ایلام</item>
        <item>بوشهر</item>
        <item>تهران</item>
        <item>چهارمحال و بختیاری</item>
        <item>خراسان جنوبی</item>
        <item>خراسان رضوی</item>
        <item>خراسان شمالی</item>
        <item>خوزستان</item>
        <item>زنجان</item>
        <item>سمنان</item>
        <item>سیستان و بلوچستان</item>
        <item>فارس</item>
        <item>قزوین</item>
        <item>فم</item>
        <item>کردستان</item>
        <item>کرمان</item>
        <item>کرمانشاه</item>
        <item>کهگیلویه و بویراحمد</item>
        <item>گلستان</item>
        <item>گیلان</item>
        <item>لرستان</item>
        <item>مازندران</item>
        <item>مرکزی</item>
        <item>هرمزگان</item>
        <item>همدان</item>
        <item>یزد</item>
    </string-array>

</resources>