<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/padding_6">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_registerDiscount_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2"
        style="@style/text_input_layout"
        app:endIconMode="clear_text"
        android:hint="@string/discount_name"
        app:helperTextEnabled="true"
        app:helperText="@string/name_must_be_without_space">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_registerDiscount_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_registerDiscount_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2"
        style="@style/text_input_layout"
        app:endIconMode="clear_text"
        android:hint="@string/discount_amount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_registerDiscount_amount"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:maxLength="2" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_registerDiscount_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_margin="@dimen/margin_2"
        style="@style/solid_button"
        android:background="@drawable/solid_button_background"
        />

</LinearLayout>