<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/dl_userMainPage"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UserMainPage"
    tools:openDrawer="end">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_userMainPage_searchShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/search_shop"
            />

        <Button
            android:id="@+id/btn_userMainPage_checkDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_userMainPage_searchShop"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/check_discount"
            />

        <Button
            android:id="@+id/btn_userMainPage_scanQRcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_userMainPage_checkDiscount"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/scan_qr_code"
            />

        <ProgressBar
            android:id="@+id/pb_userMainPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="gone"
            />

        <FrameLayout
            android:id="@+id/fl_userMainPage_continer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:elevation="@dimen/frame_elevation"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv_userMainPage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/user_navigation_view_header"
        app:menu="@menu/user_main_page_navigtion_view"
        android:layout_gravity="end">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/tv_userMainPage_deleteUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_user"
                />

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>