<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.ChooseRoleActivity">

    <ImageView
        android:id="@+id/iv_setRole_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/light_green"
        />

    <ImageView
        android:id="@+id/iv_setRole_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/seller_foreground_layout"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iv_setRole_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.6"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text"
        android:text="@string/please_choose_your_role"
        app:layout_constraintVertical_bias="0.4"
        />

    <Button
        android:id="@+id/btn_setRole_seller"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toTopOf="@id/iv_setRole_bottom"
        app:layout_constraintBottom_toBottomOf="@id/iv_setRole_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_setRole_user"
        android:text="@string/seller"
        style="@style/solid_button"
        android:background="@drawable/solid_button_background"
        />

    <Button
        android:id="@+id/btn_setRole_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toTopOf="@id/iv_setRole_bottom"
        app:layout_constraintBottom_toBottomOf="@id/iv_setRole_bottom"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_setRole_seller"
        android:text="@string/user"
        style="@style/solid_button"
        android:background="@drawable/solid_button_background"
        />

    <ProgressBar
        android:id="@+id/pb_setRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        />

    <FrameLayout
        android:id="@+id/frame_setRole_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="@dimen/frame_elevation"
        />

</androidx.constraintlayout.widget.ConstraintLayout>